# Robot_conductor

./: .gitignore  README.md  __init__.py  requirements.txt  setup.py  train.py
HandPoints/: __init__.py  humansingle_main.py  main.py  main_pct.py  main_pct_keypoints.py  main_pointnet.py  main_pointnet_keypoints.py  train.py
HandPoints/config/: __init__.py  base_options.py  config.yaml  train_options.py
HandPoints/config/task/: handjoint.yaml
HandPoints/config/task_model/: handjoint-ssg.yaml
HandPoints/dataloader/: .gitignore  __init__.py  base_dataset.py  data_utils.py  joint_dataset.py  joint_dataset_1.py  keypoints_dataset.py
HandPoints/dataset/: data_utils.py  handpoints_dataset.py  human_points
HandPoints/model/: __init__.py  ae_handjoints.py  base_model.py  humansingle_model.py  model.py  networks.py  pct.py  pct_model.py  pointnet.py  pointnet2_ssg_cls.py  pointnet2_ssg_handjoints.py  utils.py
HandPoints/outputs/.hydra/: config.yaml  hydra.yaml  overrides.yaml
HandPoints/outputs/lightning_logs/version_14/: meta_tags.csv  (+1 more)
HandPoints/pointnet2_ops_lib/pointnet2_ops/: pointnet2_modules.py
HandPoints/preprocess/: bbx_generate_save.py  dataset_check.py  depth_rotate.py  hand_pose_generation.py  human_hand_pc_preprocess.py  human_pc.py  human_pc_preprocess.py  robot_pc_generation.py  robot_pc_preprocess.py  robot_pose_generation.py  utils.py
HandPoints/preprocess/deep_prior_hand_crop/: bighand_preprocess.py  handdetector.py
HandPoints/scripts/: joint_train.sh  joint_train_vis.sh  pct.sh  pct_joint.sh  pct_keypoints.sh  pointnet_joint.sh  pointnet_keypoints.sh  pointnet_vis.sh
HandPoints/utils/: visualizer.py
HandPose/: __init__.py  main_depth.py  shadow_demo_moveit.py  train.py
HandPose/config/: base_options.py  test_options.py  train_options.py
HandPose/dataloader/: base_dataset.py  data_utils.py  depth_pose_dataset.py  depthpose_dataset.py  pc_pose_dataset.py
HandPose/model/: __init__.py  depth_model.py  networks.py  utils.py
HandPose/preprocess/: __init__.py  depth_pose_crop.py  seg.py  utils.py
HandPose/scripts/: pose_depth_test.sh  pose_depth_train.sh
config/: config.yaml
config/task_model/: handjoint-ssg.yaml
data/: README.txt
dataset/: __init__.py  data_utils.py  dataset.py  handpoints_dataset.py
model/: __init__.py  model.py  pointnet2_ssg_cls.py  pointnet2_ssg_handjoints.py  utils.py
preprocess/: 3d_track.py  bbx_generate_save.py  dataset_check.py  hand_crop_points_generation.py  hand_preprocess.py
preprocess/deep_prior_hand_crop/: demo_prepocess.py
ros/hand_tracking/: CMakeLists.txt  README.md  package.xml
ros/hand_tracking/config/: pos_parameters.yaml  pr2_handeye.yaml
ros/hand_tracking/config/apriltag/: settings.yaml  tags.yaml
ros/hand_tracking/include/: RobotStatePublisher.h  arm_track_human_hand.h
ros/hand_tracking/launch/: arm_group_velocity_controller_switch.launch  arm_head_preparation.launch  arm_track_human_hand.launch  arm_velocity2trajectory_controller_switch.launch  moveit_jog_arm.launch  pn_teleop_arm.launch  tams_pr2_eye_on_hand.launch  tams_pr2_eye_on_hand_publish.launch
ros/hand_tracking/script/: tams_pr2_handeye_publish.py
ros/hand_tracking/src/: arm_group_velocity_controller_switch.cpp  arm_head_preparation.cpp  arm_track_human_hand.cpp  arm_velocity2trajectory_controllers_switch.cpp  left_arm_tracking_preparation.cpp  pr2_kinect_arm_track_human_hand.cpp
(+37 files in other folders)
