<?xml version="1.0"?>
<package>
  <name>hand_tracking</name>
  <version>1.0.0</version>
  <description>The perception_neuron_tf_broadcaster package</description>

  <maintainer email="simon.haller@uibk.ac.at">Simon Haller</maintainer>
  <maintainer email="alexander.rietzler@uibk.ac.at">Alexander Rietzler</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>bio_ik</build_depend>

  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>bio_ik</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_core</run_depend>

</package>
